Fix input field should not wrap on smaller screens

--- a/css/man.css
+++ b/css/man.css
@@ -211,3 +211,7 @@ input[type="text"] {
 .output-placeholder {
   color: #525252;
 }
+
+outer-prompt {
+  white-space: nowrap;
+}
